# cellforce-spark-extension

./: .gitignore
java/: cellgen-spark-extension-1.0.0.jar.12  pom.xml
java/src/main/java/cellforce/spark/: Main.java  NativeFunctions.java
java/src/main/java/cellgen/spark/: Main.java  NativeFunctions.java
java/src/main/scala/cellforce/spark/: ScriptMapInStrOutBool.scala  ScriptMapInStrOutStr.scala  SparkUdfExtension.scala
java/src/main/scala/cellgen/spark/: RunScriptMapInStrOutBool.scala  RunScriptMapInStrOutStr.scala  RunScriptMapStrExpression.scala  ScriptMapInStrOutBool.scala  ScriptMapInStrOutStr.scala  SparkUdfExtension.scala
java/src/main/scala/org/apache/spark/sql/catalyst/expressions/aggregate/: RunScriptReduceInIntOutInt.scala  ScriptReduceInIntOutInt.scala  UserSum.scala
rust/: Cargo.toml
rust/src/: lib.rs
