[package]
name = "cellforce-spark-extension"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

cellforce-script-core = { git = "https://github.com/cellmind/cellforce-script-core" }


j4rs = "0.17"
j4rs_derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.63"

